<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.misw43022025.alarmify.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_alarms"
        android:name="com.misw43022025.alarmify.ui.alarms.AlarmsFragment"
        android:label="@string/title_alarms"
        tools:layout="@layout/fragment_alarms" />

    <fragment
        android:id="@+id/navigation_configs"
        android:name="com.misw43022025.alarmify.ui.configs.ConfigsFragment"
        android:label="@string/title_configs"
        tools:layout="@layout/fragment_configs" />

    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.misw43022025.alarmify.ui.logout.LogoutFragment"
        android:label="@string/title_logout"
        tools:layout="@layout/fragment_configs" />
</navigation>