<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Superior"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/loginsupbackground"
        app:layout_constraintBottom_toTopOf="@+id/Inferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/nombreapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="48dp"
            android:fontFamily="@font/montserrat_black"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/alarmifyLabel"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/Formulario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/Formulario"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/emailLabel" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/formfield"
                android:ems="10"
                android:fontFamily="@font/montserrat_thin"
                android:inputType="text"
                android:text="@string/emailField"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/passLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/passLabel" />

            <EditText
                android:id="@+id/passField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/formfield"
                android:ems="10"
                android:fontFamily="@font/montserrat_thin"
                android:inputType="textPassword"
                android:text="@string/passField"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/sombra"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/gradientnegro2transparent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/Inferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/calmBlue2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/brillo"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            app:srcCompat="@drawable/gradienteblancotransp" />

        <Button
            android:id="@+id/restorePassBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="48dp"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/restorepassBtn"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/IngresarBtn"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="80dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/botonredondeado"
            android:fontFamily="@font/montserrat"
            android:text="@string/ingresarBtn"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/GoogleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="80dp"
            android:background="@drawable/botonredondeado"
            android:fontFamily="@font/montserrat"
            android:text="@string/googleBtn"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/LabelO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:padding="8dp"
            android:text="@string/oLabel"
            android:textAlignment="center" />

        <Button
            android:id="@+id/RegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/botonredondeado"
            android:fontFamily="@font/montserrat"
            android:text="@string/registration"
            android:textAllCaps="false" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>